products added header

--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -5,7 +5,9 @@
     list-style: none;
     text-decoration: none;
 }
-
+button{
+    cursor: pointer;
+}
 body{
     display: flex;
     font-family: 'Rubik', sans-serif;
