--- a/sass/pages/index.scss
+++ b/sass/pages/index.scss
@@ -64,7 +64,7 @@ main {
 
         &-title {
             @include mxn.title();
-            
+
         }
 
         &-link {
@@ -76,49 +76,99 @@ main {
 
     }
 
-    &__rows{
+    &__rows {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         gap: 40px;
     }
 
-    &__card{
+    &__card {
         background-color: #fff;
-        &-inner{
+        padding: 8px;
+        border-radius: 4px;
+
+        &-inner {
             overflow: hidden;
+            margin-bottom: 8px;
+
+            &+div {
+                @include mxn.flex-center(space-between);
+                margin-bottom: 8px;
+            }
         }
-        &-img{
+
+        &-img {
+            cursor: pointer;
             width: 100%;
             transform: scale(1);
             transition: all 0.5s;
-            &:hover{
+
+            &:hover {
                 transform: scale(1.2);
             }
         }
-        &-desc{
+
+        &-discount {
+            border-radius: 4px;
+            background: var.$primary;
+            padding: 8px;
+            color: rgb(255, 255, 255);
+            line-height: 150%;
+        }
+
+        &-name {
+            color: var.$surface-text;
+            font-size: 18px;
+            font-weight: 700;
+            line-height: 150%;
+        }
+
+        &-desc {
             display: -webkit-box;
             -webkit-line-clamp: 2;
-            -webkit-box-orient: vertical;  
+            -webkit-box-orient: vertical;
             overflow: hidden;
             color: var.$surface-text;
             line-height: 150%;
+            margin-bottom: 8px;
+        }
+
+        &-rate{
+            margin-bottom: 8px;
+        }
+
+        &-btn {
+            width: 100%;
+            border: 1px solid var.$secondary;
+            border-radius: 4px;
+            padding: 8px;
+            background-color: #fff;
+            color: var.$secondary;
+            transition: all 0.3s;
+            &:hover{
+                border: 1px solid var.$primary;
+                color: #fff;
+                background-color: var.$primary;
+            }
         }
     }
 }
+
 // media qilish kk
 
 
 
 
-.new-products{
-    padding-top: 120px ;
+.new-products {
+    padding-top: 120px;
+
     &__wrapper {
         @include mxn.flex-center(space-between);
         margin-bottom: 40px;
 
         &-title {
             @include mxn.title();
-            
+
         }
 
         &-link {
@@ -129,7 +179,8 @@ main {
         }
 
     }
-    &__rows{
+
+    &__rows {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         gap: 40px;
@@ -139,15 +190,16 @@ main {
 // media
 
 
-.purchased{
-    padding-top: 120px ;
+.purchased {
+    padding-top: 120px;
+
     &__wrapper {
         @include mxn.flex-center(space-between);
         margin-bottom: 40px;
 
         &-title {
             @include mxn.title();
-            
+
         }
 
         &-link {
@@ -158,7 +210,8 @@ main {
         }
 
     }
-    &__rows{
+
+    &__rows {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         gap: 40px;
