--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -107,7 +107,7 @@
 
 }
 
-@media only screen and (max-width: 1042px) {
+@include mxn.media(1042px){
     .header {
         &__logo {
             display: none;
@@ -149,7 +149,8 @@
     }
 }
 
-@media only screen and (max-width: 665px){
+
+@include mxn.media(665px){
     .header{
 
 
