--- a/sass/pages/index.scss
+++ b/sass/pages/index.scss
@@ -29,7 +29,7 @@ main {
     }
 }
 
-@media only screen and (max-width: 1035px) {
+@include mxn.media(1035px) {
     .delivery {
 
         &__title {
@@ -39,7 +39,8 @@ main {
     }
 }
 
-@media only screen and (max-width: 645px) {
+
+@include mxn.media(645px) {
     .delivery {
         height: 80px;
 
@@ -62,12 +63,15 @@ main {
         @include mxn.flex-center(space-between);
         margin-bottom: 40px;
 
-        &-title {
+        &__title {
             @include mxn.title();
 
+            @include mxn.media(645px) {
+                font-size: 24px;
+            }
         }
 
-        &-link {
+        &__link {
             @include mxn.flex-center();
             gap: 8px;
             color: var.$hardest;
@@ -87,7 +91,7 @@ main {
         padding: 8px;
         border-radius: 4px;
 
-        &-inner {
+        &__inner {
             overflow: hidden;
             margin-bottom: 8px;
 
@@ -97,7 +101,7 @@ main {
             }
         }
 
-        &-img {
+        &__img {
             cursor: pointer;
             width: 100%;
             transform: scale(1);
@@ -108,7 +112,7 @@ main {
             }
         }
 
-        &-discount {
+        &__discount {
             border-radius: 4px;
             background: var.$primary;
             padding: 8px;
@@ -116,14 +120,18 @@ main {
             line-height: 150%;
         }
 
-        &-name {
+        &__name {
             color: var.$surface-text;
             font-size: 18px;
             font-weight: 700;
             line-height: 150%;
+            display: -webkit-box;
+            -webkit-line-clamp: 1;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
         }
 
-        &-desc {
+        &__desc {
             display: -webkit-box;
             -webkit-line-clamp: 2;
             -webkit-box-orient: vertical;
@@ -133,11 +141,11 @@ main {
             margin-bottom: 8px;
         }
 
-        &-rate{
+        &__rate {
             margin-bottom: 8px;
         }
 
-        &-btn {
+        &__btn {
             width: 100%;
             border: 1px solid var.$secondary;
             border-radius: 4px;
@@ -145,7 +153,8 @@ main {
             background-color: #fff;
             color: var.$secondary;
             transition: all 0.3s;
-            &:hover{
+
+            &:hover {
                 border: 1px solid var.$primary;
                 color: #fff;
                 background-color: var.$primary;
@@ -154,11 +163,6 @@ main {
     }
 }
 
-// media qilish kk
-
-
-
-
 .new-products {
     padding-top: 120px;
 
@@ -166,12 +170,16 @@ main {
         @include mxn.flex-center(space-between);
         margin-bottom: 40px;
 
-        &-title {
+        &__title {
             @include mxn.title();
+
+            @include mxn.media(645px) {
+                font-size: 24px;
+            }
 
         }
 
-        &-link {
+        &__link {
             @include mxn.flex-center();
             gap: 8px;
             color: var.$hardest;
@@ -187,9 +195,6 @@ main {
     }
 }
 
-// media
-
-
 .purchased {
     padding-top: 120px;
 
@@ -197,12 +202,16 @@ main {
         @include mxn.flex-center(space-between);
         margin-bottom: 40px;
 
-        &-title {
+        &__title {
             @include mxn.title();
+
+            @include mxn.media(645px) {
+                font-size: 24px;
+            }
 
         }
 
-        &-link {
+        &__link {
             @include mxn.flex-center();
             gap: 8px;
             color: var.$hardest;
@@ -215,5 +224,122 @@ main {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         gap: 40px;
+    }
+}
+
+@include mxn.media(992px) {
+
+    .discount,
+    .new-products,
+    .purchased {
+        padding-top: 100px;
+
+        &__wrapper {
+            margin-bottom: 32px;
+        }
+
+        &__card:nth-child(3) {
+            display: none;
+        }
+
+        &__rows {
+            grid-template-columns: repeat(3, 1fr);
+        }
+    }
+}
+
+@include mxn.media(645px) {
+
+    .discount,
+    .new-products,
+    .purchased {
+        padding-top: 80px;
+
+        &__wrapper {
+            margin-bottom: 16px;
+        }
+
+        &__link {
+            font-size: 12px;
+            text-align: center;
+        }
+
+        &__card {
+
+            &__name {
+                font-size: 14px;
+            }
+
+            &__discount {
+                font-size: 12px;
+                padding: 6px;
+            }
+        }
+
+        &__card:nth-child(3) {
+            display: block;
+        }
+
+        &__rows {
+            grid-template-columns: repeat(2, 1fr);
+            gap: 16px;
+        }
+    }
+}
+
+.apps {
+    padding-top: 120px;
+
+    &__title {
+        @include mxn.title();
+        margin-bottom: 40px;
+    }
+
+    &__row {
+        @include mxn.flex-center(space-between);
+        gap: 40px;
+    }
+
+    &__item {
+        @include mxn.flex-center();
+        max-width: 584px;
+        width: 100%;
+        height: 200px;
+        padding: 30px 20px;
+        transition: all 0.4s;
+
+        &:hover{
+            box-shadow: 0px 8px 16px 0px rgba(202, 147, 96, 0.5);
+        }
+
+        &__title {
+            color: var.$surface-text;
+            font-size: 24px;
+            line-height: 150%;
+            margin-bottom: 6px;
+        }
+
+        &__text {
+            color: var.$surface-text;
+            line-height: 150%;
+        }
+
+        &:nth-child(1) {
+            background-color: #FCD5BA;
+            border-radius: 4px;
+        }
+
+        &:nth-child(2) {
+            border-radius: 4px;
+            background: #E5FFDE;
+        }
+    }
+}
+
+@include mxn.media(1040px){
+    .apps{
+        &__row{
+            flex-direction: column;
+        }
     }
 }
