--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -5,9 +5,15 @@
     align-items: $items;
 }
 
-@mixin title {
+@mixin title() {
     color: var.$surface-text;
     font-size: 36px;
     font-weight: 700;
     line-height: 150%;
+}
+
+@mixin media($max-width){
+    @media only screen and (max-width: $max-width){
+        @content
+    }
 }
