--- a/css/index.css
+++ b/css/index.css
@@ -65,6 +65,40 @@ main {
   margin: 0 auto;
 }
 
+.category {
+  background-color: #fff;
+  position: fixed;
+  width: 100%;
+  top: 74px;
+  left: 0;
+  z-index: 55;
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+.category__list {
+  padding: 40px 20px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 24px;
+}
+.category__list__link {
+  color: #414141;
+  font-weight: 700;
+  line-height: 150%;
+}
+.category__list__link:hover {
+  color: #ff6633;
+}
+.category__active {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
 .header {
   padding: 16px 0;
   position: fixed;
@@ -79,6 +113,9 @@ main {
 }
 .header__logo2 {
   display: none;
+}
+.header__menu {
+  cursor: pointer;
 }
 .header__nav {
   display: -webkit-box;
@@ -258,6 +295,12 @@ main {
   background: rgb(251, 248, 236);
 }
 
+@media only screen and (max-width: 672px) {
+  .category__list {
+    padding: 20px 10px;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
 .delivery {
   max-width: 1440px;
   width: 100%;
@@ -649,5 +692,155 @@ main {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+  }
+}
+@media only screen and (max-width: 576px) {
+  .apps__title {
+    font-size: 24px;
+  }
+  .apps__item__title {
+    font-size: 18px;
+  }
+  .apps__item__text {
+    font-size: 12px;
+  }
+  .apps__item img {
+    width: 150px;
+  }
+}
+.stores {
+  padding-top: 120px;
+}
+.stores__title {
+  color: #414141;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 150%;
+  margin-bottom: 40px;
+}
+.stores__btns {
+  margin-bottom: 24px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 24px;
+}
+.stores__btns__btn {
+  border-radius: 4px;
+  background: #f3f2f1;
+  padding: 4px;
+  border: none;
+  color: #606060;
+  font-size: 12px;
+  line-height: 150%;
+}
+.stores__btns__btn__active {
+  background: #70c05b;
+  color: #fff;
+}
+.stores__maps iframe {
+  width: 100%;
+}
+
+.articles {
+  padding-top: 120px;
+  padding-bottom: 100px;
+}
+.articles__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 40px;
+}
+.articles__title {
+  color: #414141;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 150%;
+}
+.articles__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 8px;
+  color: #606060;
+  line-height: 150%;
+}
+.articles__row {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 40px;
+}
+.articles__card {
+  background-color: #fff;
+}
+.articles__card__img {
+  width: 100%;
+}
+.articles__card__inner {
+  padding: 10px;
+  min-height: 260px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+}
+.articles__card__date {
+  color: #8f8f8f;
+  font-size: 12px;
+  line-height: 150%;
+  margin-bottom: 10px;
+}
+.articles__card__title {
+  color: #414141;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 150%;
+  margin-bottom: 10px;
+}
+.articles__card__desc {
+  color: #414141;
+  line-height: 150%;
+  margin-bottom: 10px;
+}
+.articles__card__btn {
+  border-radius: 4px;
+  color: #70c05b;
+  line-height: 150%;
+  padding: 4px 10px;
+  margin-top: auto;
+  border: none;
+  background: rgb(229, 255, 222);
+}
+.articles__card__btn:hover {
+  background-color: #70c05b;
+  color: #fff;
+}
+
+@media only screen and (max-width: 672px) {
+  .articles {
+    padding-top: 60px;
+    padding-bottom: 40px;
+  }
+  .articles__row {
+    grid-template-columns: 1fr;
   }
 }
