--- a/css/products.css
+++ b/css/products.css
@@ -65,6 +65,40 @@ main {
   margin: 0 auto;
 }
 
+.category {
+  background-color: #fff;
+  position: fixed;
+  width: 100%;
+  top: 74px;
+  left: 0;
+  z-index: 55;
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+.category__list {
+  padding: 40px 20px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 24px;
+}
+.category__list__link {
+  color: #414141;
+  font-weight: 700;
+  line-height: 150%;
+}
+.category__list__link:hover {
+  color: #ff6633;
+}
+.category__active {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
 .header {
   padding: 16px 0;
   position: fixed;
@@ -79,6 +113,9 @@ main {
 }
 .header__logo2 {
   display: none;
+}
+.header__menu {
+  cursor: pointer;
 }
 .header__nav {
   display: -webkit-box;
@@ -256,4 +293,157 @@ main {
 }
 main {
   background: rgb(251, 248, 236);
+}
+
+.discount__card {
+  background-color: #fff;
+  padding: 8px;
+  border-radius: 4px;
+}
+.discount__card__inner {
+  overflow: hidden;
+  margin-bottom: 8px;
+}
+.discount__card__inner + div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 8px;
+}
+.discount__card__img {
+  cursor: pointer;
+  width: 100%;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+.discount__card__img:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+.discount__card__discount {
+  border-radius: 4px;
+  background: #ff6633;
+  padding: 8px;
+  color: rgb(255, 255, 255);
+  line-height: 150%;
+}
+.discount__card__name {
+  color: #414141;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 150%;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+.discount__card__desc {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  color: #414141;
+  line-height: 150%;
+  margin-bottom: 8px;
+}
+.discount__card__rate {
+  margin-bottom: 8px;
+}
+.discount__card__btn {
+  width: 100%;
+  border: 1px solid #70c05b;
+  border-radius: 4px;
+  padding: 8px;
+  background-color: #fff;
+  color: #70c05b;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.discount__card__btn:hover {
+  border: 1px solid #ff6633;
+  color: #fff;
+  background-color: #ff6633;
+}
+
+.products {
+  margin-top: 74px;
+}
+.products__links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-top: 27px;
+  margin-bottom: 24px;
+  gap: 10px;
+}
+.products__link {
+  color: #414141;
+  font-size: 12px;
+  line-height: 150%;
+}
+.products-link {
+  color: #8f8f8f;
+  font-size: 12px;
+  line-height: 150%;
+}
+.products__title {
+  color: #414141;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 150%;
+  margin-bottom: 40px;
+}
+.products__pagination {
+  margin-bottom: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 40px;
+}
+.products__pagination__btn {
+  border: none;
+  padding: 8px 12px;
+  border-radius: 4px;
+  background-color: #ff6633;
+  color: #fff;
+  text-transform: capitalize;
+}
+.products__pagination__btns {
+  border: 1px solid #ff6633;
+  padding: 8px 12px;
+  border-radius: 4px;
+  background-color: #f3f2f1;
+}
+.products__pagination__btns-disabled {
+  background-color: #bfbfbf;
+}
+.products__pagination__btns-active {
+  background-color: #ff6633;
+  color: #fff;
+}
+.products__row {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 40px;
 }
