--- a/css/cart.css
+++ b/css/cart.css
@@ -413,3 +413,103 @@ main {
     overflow: hidden;
   }
 }
+.cart__btns {
+  background-color: #70c05b;
+  display: inline-block;
+  padding: 4px 16px;
+  border-radius: 4px;
+  color: #fff;
+}
+.cart__btns button {
+  border: none;
+  background-color: #70c05b;
+  margin-right: 12px;
+  margin-left: 4px;
+  color: #fff;
+  font-size: 18px;
+}
+.cart__btns span {
+  margin-right: 8px;
+}
+
+main {
+  background: rgb(251, 248, 236);
+}
+
+.discount__card {
+  background-color: #fff;
+  padding: 8px;
+  border-radius: 4px;
+}
+.discount__card__inner {
+  overflow: hidden;
+  margin-bottom: 8px;
+}
+.discount__card__inner + div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 8px;
+}
+.discount__card__img {
+  cursor: pointer;
+  width: 100%;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+.discount__card__img:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+.discount__card__discount {
+  border-radius: 4px;
+  background: #ff6633;
+  padding: 8px;
+  color: rgb(255, 255, 255);
+  line-height: 150%;
+}
+.discount__card__name {
+  color: #414141;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 150%;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+.discount__card__desc {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  color: #414141;
+  line-height: 150%;
+  margin-bottom: 8px;
+}
+.discount__card__rate {
+  margin-bottom: 8px;
+}
+.discount__card__btn {
+  width: 100%;
+  border: 1px solid #70c05b;
+  border-radius: 4px;
+  padding: 8px;
+  background-color: #fff;
+  color: #70c05b;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.discount__card__btn:hover {
+  border: 1px solid #ff6633;
+  color: #fff;
+  background-color: #ff6633;
+}
