--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -335,3 +335,23 @@
         }
     }
 }
+
+.cart__btns{
+    background-color: var.$secondary;
+    display: inline-block;
+    padding: 4px 16px;
+    border-radius: 4px;
+    color: #fff;
+    button{
+        border: none;
+        background-color: var.$secondary;
+        margin-right: 12px;
+        margin-left: 4px;
+        color: #fff;
+        font-size: 18px;
+    }
+
+    span{
+        margin-right: 8px;
+    }
+}
