--- a/sass/pages/cart.scss
+++ b/sass/pages/cart.scss
@@ -83,3 +83,81 @@ main {
         }
     }
 }
+
+
+.carts{
+    margin-top: 74px;
+    padding-bottom: 120px;
+
+    &__links {
+        @include mxn.flex-center();
+        padding-top: 27px;
+        margin-bottom: 24px;
+        gap: 10px;
+    }
+
+    &__link {
+        color: var.$surface-text;
+        font-size: 12px;
+        line-height: 150%;
+    }
+
+    &-link{
+        color: var.$hard;
+        font-size: 12px;
+        line-height: 150%;
+    }
+
+    &__title{
+        color: var.$surface-text;
+        font-size: 36px;
+        font-weight: 700;
+        line-height: 150%;
+        margin-bottom: 40px;
+    }
+}
+
+.cart-products{
+
+    &__row{
+        width: 70%;
+    }
+
+    &__cart{
+        @include mxn.flex-center(space-between);
+        margin-bottom: 20px;
+        background-color: #fff;
+        padding: 10px;
+        border-radius: 4px;
+        &>div{
+            @include mxn.flex-center();
+            gap: 16px;
+        }
+
+    }
+    &__img{
+        object-fit: cover;
+        width: 80px;
+        height: 60px;
+    }
+    &__inner{
+        width: 100px;
+    }
+
+    &__name{
+        color: var.$surface-text;
+        line-height: 150%;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        width: 300px;
+    }
+    &__price{
+        color: var.$surface-text;
+        font-size: 12px;
+        font-weight: 700;
+        line-height: 150%; 
+        width: 60px;
+    }
+}
