--- a/sass/pages/index.scss
+++ b/sass/pages/index.scss
@@ -103,6 +103,7 @@ main {
         &__inner {
             overflow: hidden;
             margin-bottom: 8px;
+            position: relative;
 
             &+div {
                 @include mxn.flex-center(space-between);
@@ -127,6 +128,17 @@ main {
             padding: 8px;
             color: rgb(255, 255, 255);
             line-height: 150%;
+        }
+
+        &__heart{
+            border-radius: 4px;
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            cursor: pointer;
+            padding: 5px;
+            background-color: var.$lightest;
+            
         }
 
         &__name {
