--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -23,13 +23,13 @@
             font-weight: 700;
             line-height: 150%;
 
-            &:hover{
+            &:hover {
                 color: var.$primary;
             }
         }
     }
 
-    &__active{
+    &__active {
         transform: translateY(0);
     }
 }
@@ -50,7 +50,7 @@
         display: none;
     }
 
-    &__menu{
+    &__menu {
         cursor: pointer;
     }
 
@@ -145,7 +145,7 @@
 
 }
 
-@include mxn.media(1042px){
+@include mxn.media(1042px) {
     .header {
         &__logo {
             display: none;
@@ -188,28 +188,28 @@
 }
 
 
-@include mxn.media(665px){
-    .header{
+@include mxn.media(665px) {
+    .header {
 
 
-        &__list1{
-            &-item{
+        &__list1 {
+            &-item {
                 display: none;
             }
 
-            &-item2{
+            &-item2 {
                 margin-left: auto;
             }
-            
+
         }
 
-        &__list2{
+        &__list2 {
             display: none;
         }
     }
 }
 
-.search{
+.search {
     position: fixed;
     margin: 0 auto;
     top: 74px;
@@ -217,12 +217,12 @@
     z-index: 20;
     display: none;
 
-    &__info{
+    &__info {
         text-align: center;
         margin-top: 15px;
     }
 
-    &__products{
+    &__products {
         width: 500px;
         left: -400px;
         position: absolute;
@@ -232,7 +232,7 @@
         padding: 15px 20px;
     }
 
-    &__card{
+    &__card {
         display: flex;
         align-items: center;
         gap: 20px;
@@ -240,78 +240,83 @@
         border-radius: 4px;
         margin-bottom: 8px;
         padding: 10px 8px;
-        &:hover{
-            box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.75);
+
+        &:hover {
+            box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.75);
         }
 
-        &__img{
+        &__img {
             width: 120px;
             height: 120px;
             object-fit: contain;
         }
 
-        &__wrapper{
+        &__wrapper {
             display: flex;
             flex-direction: column;
             align-items: start;
         }
 
-        &__inner{
-           @include mxn.flex-center(space-around);
+        &__inner {
+            @include mxn.flex-center(space-around);
             padding: 0 8px;
             margin-bottom: 4px;
         }
 
-        &__desc{
+        &__desc {
             margin-bottom: 8px;
         }
 
-        &__discount{
+        &__discount {
             border-radius: 4px;
             background: var.$primary;
             color: #FFf;
             padding: 0 4px;
         }
 
-        &__price{
+        &__price {
             margin-bottom: 4px;
         }
     }
 
 }
 
-@include mxn.media(800px){
-    .search{
-        &__products{
+@include mxn.media(800px) {
+    .search {
+        &__products {
             left: -300px;
         }
     }
 }
-@include mxn.media(656px){
-    .search{
-        &__products{
+
+@include mxn.media(656px) {
+    .search {
+        &__products {
             left: -250px;
         }
     }
 }
-@include mxn.media(535px){
-    .search{
-        &__products{
+
+@include mxn.media(535px) {
+    .search {
+        &__products {
             width: 400px;
             left: -200px;
         }
     }
 }
-@include mxn.media(430px){
-    .search{
-        
-        &__products{
+
+@include mxn.media(430px) {
+    .search {
+
+        &__products {
             width: 380px;
             left: -190px;
         }
-        &__card{
 
-            &__desc{
+        &__card {
+
+            &__desc {
                 display: -webkit-box;
                 -webkit-line-clamp: 2;
                 -webkit-box-orient: vertical;
@@ -321,13 +326,14 @@
     }
 }
 
-.cart__btns{
+.cart__btns {
     background-color: var.$secondary;
     @include mxn.flex-center(space-between);
     width: 100%;
     border-radius: 4px;
     color: #fff;
-    button{
+
+    button {
         border: none;
         background-color: var.$secondary;
         color: #fff;
@@ -335,10 +341,98 @@
         width: 35%;
     }
 
-    span{
+    span {
         background-color: var.$hard;
         width: 35%;
         text-align: center;
         padding: 7px;
+    }
+}
+
+.modal {
+    position: fixed;
+    inset: 0;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(252, 213, 186, 0.8);
+    transition: all 0.5s;
+
+    &__show{
+        z-index: 120;
+    }
+
+    &__body {
+        background-color: #FFf;
+        padding: 40px 80px;
+        display: flex;
+        flex-direction: column;
+        position: relative;
+
+        label {
+            color: var.$hard;
+            font-size: 18px;
+            line-height: 150%;
+        }
+
+        input {
+            border: 1px solid var.$hard;
+            outline: none;
+            padding: 12px 16px;
+            border-radius: 4px;
+            margin-bottom: 32px;
+        }
+
+        div {
+            @include mxn.flex-center(space-between);
+            margin-top: 32px;
+        }
+    }
+
+    &__close {
+        border: none;
+        position: absolute;
+        padding: 5px;
+        top: 0;
+        right: 0;
+    }
+
+    &__title {
+        color: var.$surface-text;
+        font-size: 24px;
+        line-height: 150%;
+        text-align: center;
+        margin-bottom: 32px;
+    }
+
+    &__btn {
+        border: none;
+        padding: 16px;
+        border-radius: 4px;
+        background: rgb(252, 213, 186);
+        color: var.$primary;
+        font-size: 24px;
+        line-height: 150%;
+    }
+
+    &__log-in {
+        color: var.$secondary;
+        border: 1px solid var.$secondary ;
+        background-color: #FFf;
+        font-size: 12px;
+        line-height: 150%;
+        padding: 8px;
+        border-radius: 4px;
+    }
+
+    &__forgot-password{
+        font-size: 12px;
+        line-height: 150%;
+        padding: 8px;
+        border: none;
+        background-color: #FFf;
     }
 }
