--- a/sass/pages/cart.scss
+++ b/sass/pages/cart.scss
@@ -84,8 +84,65 @@ main {
     }
 }
 
+.toggle {
+    cursor: pointer;
+    display: inline-block;
+}
 
-.carts{
+.toggle-switch {
+    display: inline-block;
+    background: #ccc;
+    border-radius: 16px;
+    width: 58px;
+    height: 32px;
+    position: relative;
+    vertical-align: middle;
+    transition: background 0.25s;
+}
+
+.toggle-switch:before,
+.toggle-switch:after {
+    content: "";
+}
+
+.toggle-switch:before {
+    display: block;
+    background: linear-gradient(to bottom, #fff 0%, #eee 100%);
+    border-radius: 50%;
+    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.25);
+    width: 24px;
+    height: 24px;
+    position: absolute;
+    top: 4px;
+    left: 4px;
+    transition: left 0.25s;
+}
+
+.toggle:hover .toggle-switch:before {
+    background: linear-gradient(to bottom, #fff 0%, #fff 100%);
+    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.5);
+}
+
+.toggle-checkbox:checked+.toggle-switch {
+    background: var.$secondary;
+}
+
+.toggle-checkbox:checked+.toggle-switch:before {
+    left: 30px;
+}
+
+.toggle-checkbox {
+    position: absolute;
+    visibility: hidden;
+}
+
+.toggle-label {
+    margin-left: 5px;
+    position: relative;
+    top: 2px;
+}
+
+.carts {
     margin-top: 74px;
     padding-bottom: 120px;
 
@@ -102,49 +159,130 @@ main {
         line-height: 150%;
     }
 
-    &-link{
+    &-link {
         color: var.$hard;
         font-size: 12px;
         line-height: 150%;
     }
 
-    &__title{
+    &__title {
         color: var.$surface-text;
         font-size: 36px;
         font-weight: 700;
         line-height: 150%;
         margin-bottom: 40px;
     }
+
+    &__container {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    &__right {
+        &__text {
+            color: var.$hard;
+            line-height: 150%;
+        }
+
+        hr {
+            margin-bottom: 24px;
+        }
+
+        div {
+            @include mxn.flex-center(space-between);
+        }
+
+        &__price {
+            color: var.$surface-text;
+        }
+
+        &__discount {
+            font-weight: 700;
+            color: var.$primary;
+        }
+
+        &__total-price {
+            color: var.$surface-text;
+            font-family: Rubik;
+            font-size: 24px;
+            font-weight: 700;
+            line-height: 150%;
+            margin-bottom: 8px;
+        }
+
+        &__bonus {
+            font-size: 12px;
+            color: var.$secondary;
+            text-align: center;
+            margin-bottom: 32px;
+        }
+
+        &__min-price {
+            color: #fff;
+            font-size: 12px;
+            line-height: 150%;
+            padding: 0 8px;
+            border-radius: 4px;
+            background-color: var.$error;
+            margin-bottom: 16px;
+        }
+
+        &__btn {
+            width: 100%;
+            border-radius: 4px;
+            border: none;
+            padding: 16px;
+            color: var.$primary;
+            font-size: 24px;
+            line-height: 150%;
+            background-color: #FCD5BA;
+        }
+
+    }
+
+    &__toggle {
+        margin-bottom: 20px;
+        @include mxn.flex-center();
+
+        &+p {
+            margin-bottom: 24px;
+        }
+    }
 }
 
-.cart-products{
+.cart-products {
 
-    &__row{
+
+
+    &__row {
         width: 70%;
     }
 
-    &__cart{
+    &__cart {
         @include mxn.flex-center(space-between);
         margin-bottom: 20px;
         background-color: #fff;
         padding: 10px;
         border-radius: 4px;
-        &>div{
+
+        &>div {
             @include mxn.flex-center();
             gap: 16px;
         }
 
     }
-    &__img{
+
+    &__img {
         object-fit: cover;
         width: 80px;
         height: 60px;
     }
-    &__inner{
+
+    &__inner {
         width: 100px;
     }
 
-    &__name{
+    &__name {
         color: var.$surface-text;
         line-height: 150%;
         display: -webkit-box;
@@ -153,11 +291,12 @@ main {
         overflow: hidden;
         width: 300px;
     }
-    &__price{
+
+    &__price {
         color: var.$surface-text;
         font-size: 12px;
         font-weight: 700;
-        line-height: 150%; 
+        line-height: 150%;
         width: 60px;
     }
 }
