--- a/sass/pages/category.scss
+++ b/sass/pages/category.scss
@@ -11,6 +11,7 @@
         &__inner {
             overflow: hidden;
             margin-bottom: 8px;
+            position: relative;
 
             &+div {
                 @include mxn.flex-center(space-between);
@@ -29,12 +30,25 @@
             }
         }
 
+        &__heart{
+            border-radius: 4px;
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            cursor: pointer;
+            padding: 5px;
+            background-color: transparent;
+            
+        }
+
         &__discount {
+            margin-top: 4px;
             border-radius: 4px;
             background: var.$primary;
             padding: 8px;
             color: rgb(255, 255, 255);
             line-height: 150%;
+            width: 56px;
         }
 
         &__name {
@@ -79,6 +93,7 @@
         }
     }
 }
+
 
 .categories{
     margin-top: 74px;
